[package]
authors = ["Jan Solanti <jhs@psonet.com>"]
license = "MIT"
name = "texpresso_cli"
version = "2.0.1"
edition = "2021"
description = "A commandline utility for compressing images to GPU-readable texture formats"
homepage = "https://github.com/jansol/texpresso"
repository = "https://github.com/jansol/texpresso"
categories = ["compression", "game-engines", "multimedia::images", "multimedia::encoding", "rendering::data-formats"]
keywords = ["DDS", "DXT", "texture", "compression"]

[[bin]]
name = "texpresso"
path = "src/main.rs"
doc = false

[dependencies]
ddsfile = "0.5"
jpeg-decoder = "0.2"
png = "0.17"
clap = {version = "3", features = ["derive"]}

[features]
rayon = ["texpresso/rayon"]
default = ["rayon"]

[dependencies.texpresso]
path = "../lib"
version = "2.0.1"
