[package]
name = "squish"
version = "1.0.0"
license = "MIT"
authors = ["Jan Solanti <jhs@psonet.com>"]
edition = "2018"
description = "A pure Rust BC1/2/3 compressor and decompressor based on Simon Brown's libsquish"
homepage = "https://github.com/jansol/squish-rs"
repository = "https://github.com/jansol/squish-rs"
categories = ["compression", "multimedia::images", "multimedia::encoding", "no-std", "rendering::data-formats"]
keywords = ["DDS", "DXT", "texture", "compression"]

[badges]
travis-ci = {repository = "jansol/squish-rs"}

[dependencies]
libm = "0.2"
rayon = {version = "1", optional = true}

