[package]
authors = ["Jan Solanti <jhs@psonet.com>"]
license = "MIT"
name = "squish_cli"
version = "1.0.0"
edition = "2018"
description = "A commandline utility for compressing images to DDS files using BC1/2/3. Serves mainly as a usage example of squish."
exclude = ["src/assets/*"]
homepage = "https://github.com/jansol/squish-rs"
repository = "https://github.com/jansol/squish-rs"
categories = ["compression", "game-engines", "multimedia::images", "multimedia::encoding", "rendering::data-formats"]
keywords = ["DDS", "DXT", "texture", "compression"]

[badges]
travis-ci = {repository = "jansol/squish-rs"}

[[bin]]
name = "squish"
path = "src/main.rs"
doc = false

[dependencies]
ddsfile = "0.4.0"
jpeg-decoder = "0.1.18"
png = "0.17.0"
structopt = "0.3.7"

[features]
rayon = ["squish/rayon"]
default = ["rayon"]

[dependencies.squish]
path = "../squish"
version = "1.0"
